// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render partial props should not render anything when not getting width 1`] = `null`;

exports[`render partial props should not render anything when not getting widthUnits 1`] = `null`;

exports[`render partial props should render Player with default Jersey and without name label 1`] = `
<div
  className="text-center"
  style={
    Object {
      "width": "14px",
    }
  }
>
  <img
    className=""
    src="Barcelona.png"
    style={
      Object {
        "width": 10,
      }
    }
    title="Barcelona"
  />
</div>
`;

exports[`render with props should render full Player component 1`] = `
<div
  className="text-center"
  style={
    Object {
      "width": "14px",
    }
  }
>
  <img
    className=""
    src="Dortmund.png"
    style={
      Object {
        "width": 10,
      }
    }
    title="Dortmund"
  />
  <div
    className="text-truncate bg-default rounded p-1 w-100"
  >
    Shalom
  </div>
</div>
`;

exports[`render without props should not render anything 1`] = `null`;
